--- a/uiux_practice/src/components/form/index.module.scss
+++ b/uiux_practice/src/components/form/index.module.scss
@@ -9,6 +9,37 @@
     }
 }
 
+.drop_down {
+    position: absolute;
+    width: 220px;
+    top: 40px;
+    background-color: white;
+    z-index: 100;
+}
+
+.button {
+    padding: 8px;
+    width: 100%;
+    height: 35px;
+    border: 1px solid black;
+    border-bottom: none;
+    cursor: pointer;
+    background-color: white;
+    box-shadow: 2px 2px lightgray;
+
+    &:hover {
+        background-color: lightgray;
+    }
+
+    &:last-of-type {
+        border-bottom: 1px solid black;
+    }
+}
+
+.button_active {
+    background-color: lightgray;
+}
+
 // Form
 
 .form {
